# Prometheus3D

./: .gitmodules  CMakeLists.txt  LICENSE  Prometheus Engine.sln  README.md  StarGL.aps  StarGL.rc  StarGL.vcxproj  StarGL.vcxproj.filters  build_date.py  build_num.py  changelog.txt  clr_all.bat  clr_dbg.bat  clr_release.bat  compatibility.txt  resource.h
StarCore/: StarCore.vcxproj  StarCore.vcxproj.filters
StarCore/src/: BinHelper.cpp  BinHelper.h  CMakeLists.txt  InputManager.cpp  InputManager.h  PhysMesh.cpp  PhysMesh.h  PhysWorld.cpp  PhysWorld.h  ShaderIO.cpp  ShaderIO.h  Timer.cpp  Timer.h
StarRender/: StarRender.vcxproj  StarRender.vcxproj.filters
StarRender/src/: Animation.cpp  Animation.h  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GL_Helper.h  ImageLoader.cpp  ImageLoader.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Skeleton.cpp  Skeleton.h  Skybox.cpp  Skybox.h  Sprite2D.cpp  Sprite2D.h  StarMath.h  TextureManager.cpp  (+4 more)
lib/: SOIL.lib  assimp-vc140-mt.lib  freetype271.lib  zlibstatic.lib
src/: CMakeLists.txt  CommandConsole.cpp  CommandConsole.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  GameState.h  Globals.cpp  Globals.h  LightManager.cpp  LightManager.h  Main.cpp  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  builddate.h  buildnum.h  revision.h
